force-app/main/default/objects/AttachmentRow__c/AttachmentRow__c.object-meta.xml
<CustomObject>
    <label>AttachmentRow</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>AttachmentRow Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>AttachmentRows</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>