force-app/main/default/objects/AttachmentRow__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>AttachmentRows</relationshipLabel>
    <relationshipName>AttachmentRows</relationshipName>
    <type>Lookup</type>
</CustomField>