force-app/main/default/objects/AttachmentRow__c/fields/AttachmentHeader__c.field-meta.xml
<CustomField>
    <fullName>AttachmentHeader__c</fullName>
    <label>AttachmentHeader</label>
    <referenceTo>AttachmentHeader__c</referenceTo>
    <relationshipLabel>AttachmentRows</relationshipLabel>
    <relationshipName>AttachmentRows</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>