force-app/main/default/objects/AttachmentRow__c/fields/Contract_Link__c.field-meta.xml
<CustomField>
    <fullName>Contract_Link__c</fullName>
    <formula>AttachmentHeader__r.Contract_Link__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contract Link</label>
    <type>Text</type>
</CustomField>