force-app/main/default/objects/AttachmentRow__c/fields/FileConnectID__c.field-meta.xml
<CustomField>
    <fullName>FileConnectID__c</fullName>
    <caseSensitive>true</caseSensitive>
    <label>FileConnectID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>