force-app/main/default/objects/AttachmentRow__c/fields/IsThereError__c.field-meta.xml
<CustomField>
    <fullName>IsThereError__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsThereError</label>
    <type>Checkbox</type>
</CustomField>