force-app/main/default/objects/AttachmentRow__c/fields/Number_of_attempts__c.field-meta.xml
<CustomField>
    <fullName>Number_of_attempts__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Number of attempts</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>