force-app/main/default/objects/AttachmentRow__c/fields/Sharepoint_Link__c.field-meta.xml
<CustomField>
    <fullName>Sharepoint_Link__c</fullName>
    <label>Sharepoint Link</label>
    <type>Url</type>
</CustomField>