force-app/main/default/objects/AttachmentRow__c/fields/Standard_Task_Link__c.field-meta.xml
<CustomField>
    <fullName>Standard_Task_Link__c</fullName>
    <formula>AttachmentHeader__r.Standard_Task_Link__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Standard_Task_Link</label>
    <type>Text</type>
</CustomField>